oox/inc/drawingml/graphicproperties.hxx
@@ -38,6 +38,7 @@ struct GraphicProperties
     BlipFillProperties      maBlipProps;            ///< Properties for the graphic.
     OUString                m_sMediaPackageURL;     ///< Audio/Video URL.
     bool                    mbIsCustomShape = false;
+    bool                    mbIsExtruded = false;
     css::uno::Reference<css::io::XInputStream> m_xMediaStream; ///< Audio/Video input stream.
 
     /** Writes the properties to the passed property map. */
